enable Rails/ActiveRecordAliases
this *was* in the ut_rubocop gem, but should not have been - that gem ought
to work on non-rails projects

--- a/default.yml
+++ b/default.yml
@@ -41,4 +41,8 @@ Rails/UniqBeforePluck:
   Description: 'Prefer the use of uniq or distinct before pluck.'
   Enabled: true
 
+Rails/ActiveRecordAliases:
+  Description: 'Checks that ActiveRecord aliases are not used. The direct method names are more clear and easier to read.'
+  Enabled: true
+
 # ------------------------------------ /Rails --------------------------------------------
